AUTHORS: Mention Slava's contributions

--- a/pacrunner/AUTHORS
+++ b/pacrunner/AUTHORS
@@ -4,3 +4,4 @@ Alban Crequy <alban.crequy@collabora.co.uk>
 Tomasz Bursztyka <tomasz.bursztyka@linux.intel.com>
 Patrik Flykt <patrik.flykt@linux.intel.com>
 Daniel Wagner <daniel.wagner@bmw-carit.de>
+Slava Monich <slava.monich@jolla.com>
